--- a/new.html
+++ b/new.html
@@ -93,7 +93,7 @@
                         <input type='checkbox'>Send these credential via e-mail
                     </div>
                     <div class='register-div'> 
-                        <button  class='register-button' type='Submit'>Submit</button>
+                        <button  class='register-button a' type='Submit'>Submit</button>
                     </div>
 
 
@@ -108,24 +108,24 @@
     <div class='sidebar-header'>
         <h3>Recent post</h3>
     </div>
-    <div class='sidebar-div sidebar-color'><p> List post by Category Shortcode for Worpress</p><br><hr></div>
-    <div class='sidebar-div sidebar-color'><p> Roundup of Wordpress Ecosystem #1-January 2017</p><br><hr></div>
-    <div class='sidebar-div sidebar-color'><p> How to build online communities using profile builder & Buddypress</p><br><hr></div>
-    <div class='sidebar-div sidebar-color'><p> How to use AffilateWP & Paid Member Subcription together</p><br><hr></div>
-    <div class='sidebar-div sidebar-color'><p> Is business growth the method to focus on? Our 2016 year in review</p><br><hr></div>
+    <div class='sidebar-div sidebar-color'><p class='a'> List post by Category Shortcode for Worpress</p><br><hr></div>
+    <div class='sidebar-div sidebar-color'><p class='a'> Roundup of Wordpress Ecosystem #1-January 2017</p><br><hr></div>
+    <div class='sidebar-div sidebar-color'><p class='a'> How to build online communities using profile builder & Buddypress</p><br><hr></div>
+    <div class='sidebar-div sidebar-color'><p class='a'> How to use AffilateWP & Paid Member Subcription together</p><br><hr></div>
+    <div class='sidebar-div sidebar-color'><p class='a'> Is business growth the method to focus on? Our 2016 year in review</p><br><hr></div>
     <div class='sidebar-header'><h3>Recent Comments</h3></div>
     <div class='sidebar-div'> <p class="speech"></p>
-    <span class='sidebar-span sidebar-color'> A Wordpress Commenter on Hello World!</span><br><br><hr>
+    <span class='sidebar-span sidebar-color a'> A Wordpress Commenter on Hello World!</span><br><br><hr>
     </div>
     <div class='sidebar-header'><h3>Archives</h3></div>
     <div class='sidebar-div'><p class='sidebar-calendar sidebar-color'>&#128197;</p>
-    <span class='sidebar-color'>February 2017</span><br><br><hr>
+    <span class='sidebar-color a'>February 2017</span><br><br><hr>
     </div>
     <div class='sidebar-header'>
         <h3>Categories</h3>
     </div>
     <div class='sidebar-div'><p class='sidebar-calendar sidebar-color'>&#128194;</p>
-        <span class='sidebar-color'>Blog</span><br><br><hr>
+        <span class='sidebar-color a'>Blog</span><br><br><hr>
     </div>
     <script src='../js-introduction/intro.js'></script>
 </body>
