--- a/new2.html
+++ b/new2.html
@@ -11,35 +11,44 @@
      rel='stylesheet'/>
 </head>
 <body>
-    <div class='pic1'>
+    <div class='image-container'>
     <div>
 <img src="../html-intro/akamegakill.jpg" class='image1'>
+<div class="after">
+        <span class="content">Welcome to our page</span>
+    </div>
 </div>
 <div class='middle-1'><h3>Anime</h3></div>
 <div class='middle-2'><p>Not know what to watch? We have guildances for you.</p></div>
 </div>
 <div class='all'>
 <div class='pic2'>
-    <img src='../html-intro/miku1.jpg' class='aka2'>
-    <img src='../html-intro/asuna1.jpg' class='aka3'>
-    <img src='../html-intro/sister1.jpg' class='sister1'>
-    <img src='../html-intro/ichi1.jpg' class='ichi1'>
+    <img src='../html-intro/miku1.jpg' class='aka2 a'>
+    <img src='../html-intro/asuna1.jpg' class='aka3 a'>
+    <img src='../html-intro/sister1.jpg' class='sister1 a'>
+    <img src='../html-intro/ichi1.jpg' class='ichi1 a'>
 </div>
 <div class='pic3'> 
-    <img src='../html-intro/random1.jpg' class='pic3-1'>
+    <img src='../html-intro/random1.jpg' class='pic3-1 a'>
 </div>
 </div>
 <div class='last'>
     <div class='last-1'>
         <h3> Action</h3>
         <p>cbahcahscbkjasbckascb kasbcka</p>
+        <br>
+        <a href='http://www.anivn.com/' class='a'>Visit anivn.com!</a>
     </div>
     <div class='last-2'>
         <h3>Comedy</h3>
         <p>asljbcugasayhscihasckjasbcka</p>
+        <br>
+        <a href='https://animetvn.tv/' class='a'>Visit animetvn.tv!</a>
     </div>
     <div class='last-3'><h3>Isekai</h3>
     <p>asjbchiacuoabcoucbouac</p>
+    <br>
+    <a href='http://animevsub.tv/' class='a'>Visit animevsub.tv</a>
     </div>
 </div>
 </body>
