--- a/new2.html
+++ b/new2.html
@@ -37,18 +37,18 @@
         <h3> Action</h3>
         <p>cbahcahscbkjasbckascb kasbcka</p>
         <br>
-        <a href='http://www.anivn.com/' class='a'>Visit anivn.com!</a>
+        <a href='http://www.anivn.com/' class='a' target='_blank'>Visit anivn.com!</a>
     </div>
     <div class='last-2'>
         <h3>Comedy</h3>
         <p>asljbcugasayhscihasckjasbcka</p>
         <br>
-        <a href='https://animetvn.tv/' class='a'>Visit animetvn.tv!</a>
+        <a href='https://animetvn.tv/' class='a' title='new waves' target='_blank'>Visit animetvn.tv!</a>
     </div>
     <div class='last-3'><h3>Isekai</h3>
     <p>asjbchiacuoabcoucbouac</p>
     <br>
-    <a href='http://animevsub.tv/' class='a'>Visit animevsub.tv</a>
+    <a href='http://animevsub.tv/' class='a' target='_blank'>Visit animevsub.tv</a>
     </div>
 </div>
 </body>
