--- a/new.html
+++ b/new.html
@@ -15,6 +15,7 @@
     <div class='container'> 
     <div class='register'>
         <h3>Register</h3>
+        <div class='message'></div>
         <div>
             <h4>Name</h4>
         </div>
@@ -54,9 +55,10 @@
                     <label class='register-label'>
                         Email<span>*</span>
                     </label>
-                        <input  class='register-input' type='text'>
+                        <input  class='register-input4' type='text'>
                     
-            </div> <div class='register-div'>
+            </div> <div class='errorMessage4'></div>
+             <div class='register-div'>
                     <label class='register-label'>
                         Website
                     </label>
