--- a/new2.html
+++ b/new2.html
@@ -23,13 +23,14 @@
 </div>
 <div class='all'>
 <div class='pic2'>
-    <img src='../html-intro/miku1.jpg' class='aka2 a'>
-    <img src='../html-intro/asuna1.jpg' class='aka3 a'>
-    <img src='../html-intro/sister1.jpg' class='sister1 a'>
-    <img src='../html-intro/ichi1.jpg' class='ichi1 a'>
+    
+    <a href='https://vuighe.net/gotoubun-no-hanayome' target='_blank'><img src='../html-intro/miku1.jpg' class='aka2 a'></a>
+   <a href='http://www.anivn.com/thong-tin-phim/sword-art-online-alicization-bd/1702.html' target='_blank'><img src='../html-intro/asuna1.jpg' class='aka3 a'></a> 
+    <a href='http://www.anivn.com/thong-tin-phim/denpa-onna-to-seishun-otoko/492.html' target='_blank'><img src='../html-intro/sister1.jpg' class='sister1 a'></a>
+   <a href='https://vuighe.net/gotoubun-no-hanayome/tap-1-nha-co-nam-nang-dau' target='_blank'><img src='../html-intro/ichi1.jpg' class='ichi1 a'></a> 
 </div>
 <div class='pic3'> 
-    <img src='../html-intro/random1.jpg' class='pic3-1 a'>
+    <a href='http://www.anivn.com/thong-tin-phim/dansai-bunri-no-crime-edge/955.html' target='_blank'><img src='../html-intro/random1.jpg' class='pic3-1 a'></a>
 </div>
 </div>
 <div class='last'>
