--- a/new2.html
+++ b/new2.html
@@ -36,18 +36,18 @@
 <div class='last'>
     <div class='last-1'>
         <h3> Action</h3>
-        <p>cbahcahscbkjasbckascb kasbcka</p>
-        <br>
+        <p>Have amazing fighting scenes and unbelievable power-up. </p>
+        <br><br>
         <a href='http://www.anivn.com/' class='a' target='_blank'>Visit anivn.com!</a>
     </div>
     <div class='last-2'>
         <h3>Comedy</h3>
-        <p>asljbcugasayhscihasckjasbcka</p>
-        <br>
+        <p>Contain a lot of hilarious dialog and jokes,will help have a relaxing time.</p>
+        <br><br>
         <a href='https://animetvn.tv/' class='a' title='new waves' target='_blank'>Visit animetvn.tv!</a>
     </div>
     <div class='last-3'><h3>Isekai</h3>
-    <p>asjbchiacuoabcoucbouac</p>
+    <p>Basically the protagonist die(usually get hit by a truck) and get transport to another world which have magic and stuff...</p>
     <br>
     <a href='http://animevsub.tv/' class='a' target='_blank'>Visit animevsub.tv</a>
     </div>
